# stellar-tipjar-contracts

.github/workflows/: deploy.yml
analytics/: Cargo.toml
analytics/dashboard/: index.html
analytics/migrations/: 0004_create_metrics.sql
analytics/src/: aggregator.rs  collector.rs  exporter.rs  lib.rs
contracts/tipjar/src/: lib.rs
deployment/: addresses.json  config.json
examples/: simulate_tip.rs
scripts/: deploy_mainnet.sh  deploy_testnet.sh  rollback.sh  verify_deployment.sh
src/: lib.rs
src/simulation/: cost_calculator.rs  mod.rs  preview.rs  simulator.rs
tests/: simulation_tests.rs
